Implement build.rs

--- a/wfa2-sys/Cargo.toml
+++ b/wfa2-sys/Cargo.toml
@@ -2,8 +2,11 @@
 name = "wfa2-sys"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-bindgen = "0.53.1"
+bindgen = "*"
+cc = "*"
+fs-utils = "*"
