--- a/wfa2-sys/Cargo.toml
+++ b/wfa2-sys/Cargo.toml
@@ -7,6 +7,6 @@ build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-bindgen = "*"
+bindgen = "0.53.3"
 cc = "*"
 fs-utils = "*"
